--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -23,6 +14,15 @@
       "Requirement already satisfied: pytz>=2020.1 in c:\\users\\13017\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (2022.7.1)\n",
       "Requirement already satisfied: numpy>=1.21.0 in c:\\users\\13017\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from pandas) (1.24.2)\n",
       "Requirement already satisfied: six>=1.5 in c:\\users\\13017\\appdata\\roaming\\python\\python311\\site-packages (from python-dateutil>=2.8.1->pandas) (1.16.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     },
     {
@@ -163,7 +163,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,9 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -315,15 +324,6 @@
       "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\13017\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scikit-learn) (1.10.1)\n",
       "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\13017\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scikit-learn) (1.2.0)\n",
       "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\13017\\appdata\\local\\programs\\python\\python311\\lib\\site-packages (from scikit-learn) (3.1.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +481,7 @@
        "4    1     47         2         0       3  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "(712, 712, 179, 179)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -616,10 +616,10 @@
       "Logistic Regression is 83.798883 percent accurate\n",
       "KNN is 75.977654 percent accurate\n",
       "Naive Bayes is 82.681564 percent accurate\n",
-      "Linear SVMs is 79.329609 percent accurate\n",
+      "Linear SVMs is 80.446927 percent accurate\n",
       "Non Linear SVMs is 74.301676 percent accurate\n",
-      "Decision Trees is 79.888268 percent accurate\n",
-      "Random Forests is 84.916201 percent accurate\n"
+      "Decision Trees is 80.446927 percent accurate\n",
+      "Random Forests is 84.357542 percent accurate\n"
      ]
     }
    ],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "(623, 623, 268, 268)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -717,10 +717,10 @@
       "Logistic Regression is 81.343284 percent accurate\n",
       "KNN is 74.253731 percent accurate\n",
       "Naive Bayes is 80.970149 percent accurate\n",
-      "Linear SVMs is 36.567164 percent accurate\n",
+      "Linear SVMs is 81.343284 percent accurate\n",
       "Non Linear SVMs is 71.268657 percent accurate\n",
-      "Decision Trees is 79.850746 percent accurate\n",
-      "Random Forests is 84.328358 percent accurate\n"
+      "Decision Trees is 77.985075 percent accurate\n",
+      "Random Forests is 83.208955 percent accurate\n"
      ]
     }
    ],
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,15 +762,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715]\n",
-      "K-Fold Score: 0.7899441340782122\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391]\n",
+      "K-Fold Score: 0.8122905027932962\n"
      ]
     },
     {
@@ -832,6 +832,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235]\n",
+      "K-Fold Score: 0.7687150837988828\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = KNeighborsClassifier()\n",
+    "for train_index, test_index in cv.split(X,Y):\n",
+    "   X_train, X_test, y_train, y_test = train_test_split(X,Y,test_size=0.2)\n",
+    "   score = return_score(model,X_train, X_test, y_train, y_test)   \n",
+    "   scores.append(score)\n",
+    "print(\"Accuracy score in each iteration: {}\".format(scores))\n",
+    "print(\"K-Fold Score: {}\".format(np.mean(scores)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -839,13 +863,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106]\n",
-      "K-Fold Score: 0.7608938547486034\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235, 0.7430167597765364, 0.7597765363128491, 0.7262569832402235, 0.8100558659217877, 0.7653631284916201]\n",
+      "K-Fold Score: 0.7661080074487895\n"
      ]
     }
    ],
    "source": [
-    "model = KNeighborsClassifier()\n",
+    "model = GaussianNB()\n",
     "for train_index, test_index in cv.split(X,Y):\n",
     "   X_train, X_test, y_train, y_test = train_test_split(X,Y,test_size=0.2)\n",
     "   score = return_score(model,X_train, X_test, y_train, y_test)   \n",
@@ -863,32 +887,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106, 0.7877094972067039, 0.7430167597765364, 0.770949720670391, 0.8268156424581006, 0.8212290502793296]\n",
-      "K-Fold Score: 0.7705772811918064\n"
-     ]
-    }
-   ],
-   "source": [
-    "model = GaussianNB()\n",
-    "for train_index, test_index in cv.split(X,Y):\n",
-    "   X_train, X_test, y_train, y_test = train_test_split(X,Y,test_size=0.2)\n",
-    "   score = return_score(model,X_train, X_test, y_train, y_test)   \n",
-    "   scores.append(score)\n",
-    "print(\"Accuracy score in each iteration: {}\".format(scores))\n",
-    "print(\"K-Fold Score: {}\".format(np.mean(scores)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106, 0.7877094972067039, 0.7430167597765364, 0.770949720670391, 0.8268156424581006, 0.8212290502793296, 0.5754189944134078, 0.6871508379888268, 0.7877094972067039, 0.664804469273743, 0.7541899441340782]\n",
-      "K-Fold Score: 0.7513966480446929\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235, 0.7430167597765364, 0.7597765363128491, 0.7262569832402235, 0.8100558659217877, 0.7653631284916201, 0.7597765363128491, 0.7206703910614525, 0.7653631284916201, 0.7039106145251397, 0.7932960893854749]\n",
+      "K-Fold Score: 0.7617318435754189\n"
      ]
     },
     {
@@ -920,15 +920,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106, 0.7877094972067039, 0.7430167597765364, 0.770949720670391, 0.8268156424581006, 0.8212290502793296, 0.5754189944134078, 0.6871508379888268, 0.7877094972067039, 0.664804469273743, 0.7541899441340782, 0.8100558659217877, 0.6759776536312849, 0.7988826815642458, 0.3407821229050279, 0.6703910614525139, 0.6368715083798883, 0.6871508379888268, 0.664804469273743, 0.7094972067039106, 0.6368715083798883]\n",
-      "K-Fold Score: 0.7219739292364991\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235, 0.7430167597765364, 0.7597765363128491, 0.7262569832402235, 0.8100558659217877, 0.7653631284916201, 0.7597765363128491, 0.7206703910614525, 0.7653631284916201, 0.7039106145251397, 0.7932960893854749, 0.7206703910614525, 0.6983240223463687, 0.7206703910614525, 0.6536312849162011, 0.664804469273743]\n",
+      "K-Fold Score: 0.747709497206704\n"
      ]
     }
    ],
@@ -944,15 +944,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106, 0.7877094972067039, 0.7430167597765364, 0.770949720670391, 0.8268156424581006, 0.8212290502793296, 0.5754189944134078, 0.6871508379888268, 0.7877094972067039, 0.664804469273743, 0.7541899441340782, 0.8100558659217877, 0.6759776536312849, 0.7988826815642458, 0.3407821229050279, 0.6703910614525139, 0.6368715083798883, 0.6871508379888268, 0.664804469273743, 0.7094972067039106, 0.6368715083798883, 0.770949720670391, 0.7932960893854749, 0.8268156424581006, 0.7877094972067039, 0.7430167597765364]\n",
-      "K-Fold Score: 0.7308858739026338\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235, 0.7430167597765364, 0.7597765363128491, 0.7262569832402235, 0.8100558659217877, 0.7653631284916201, 0.7597765363128491, 0.7206703910614525, 0.7653631284916201, 0.7039106145251397, 0.7932960893854749, 0.7206703910614525, 0.6983240223463687, 0.7206703910614525, 0.6536312849162011, 0.664804469273743, 0.8044692737430168, 0.7150837988826816, 0.7486033519553073, 0.7486033519553073, 0.8379888268156425]\n",
+      "K-Fold Score: 0.7515828677839852\n"
      ]
     }
    ],
@@ -968,15 +968,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy score in each iteration: [0.7932960893854749, 0.7988826815642458, 0.7430167597765364, 0.7821229050279329, 0.8324022346368715, 0.7039106145251397, 0.776536312849162, 0.7262569832402235, 0.7430167597765364, 0.7094972067039106, 0.7877094972067039, 0.7430167597765364, 0.770949720670391, 0.8268156424581006, 0.8212290502793296, 0.5754189944134078, 0.6871508379888268, 0.7877094972067039, 0.664804469273743, 0.7541899441340782, 0.8100558659217877, 0.6759776536312849, 0.7988826815642458, 0.3407821229050279, 0.6703910614525139, 0.6368715083798883, 0.6871508379888268, 0.664804469273743, 0.7094972067039106, 0.6368715083798883, 0.770949720670391, 0.7932960893854749, 0.8268156424581006, 0.7877094972067039, 0.7430167597765364, 0.8156424581005587, 0.8100558659217877, 0.7932960893854749, 0.7430167597765364, 0.8491620111731844]\n",
-      "K-Fold Score: 0.7398044692737431\n"
+      "Accuracy score in each iteration: [0.8156424581005587, 0.7877094972067039, 0.8212290502793296, 0.8659217877094972, 0.770949720670391, 0.6871508379888268, 0.7374301675977654, 0.7653631284916201, 0.7094972067039106, 0.7262569832402235, 0.7430167597765364, 0.7597765363128491, 0.7262569832402235, 0.8100558659217877, 0.7653631284916201, 0.7597765363128491, 0.7206703910614525, 0.7653631284916201, 0.7039106145251397, 0.7932960893854749, 0.7206703910614525, 0.6983240223463687, 0.7206703910614525, 0.6536312849162011, 0.664804469273743, 0.8044692737430168, 0.7150837988826816, 0.7486033519553073, 0.7486033519553073, 0.8379888268156425, 0.8379888268156425, 0.7988826815642458, 0.8324022346368715, 0.7932960893854749, 0.8100558659217877]\n",
+      "K-Fold Score: 0.7605746209098164\n"
      ]
     }
    ],
